--- a/CNN_Keras_MNIST.ipynb
+++ b/CNN_Keras_MNIST.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CNN_Keras_MNIST.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQrjLqt533LKPviyf8hepw",
+      "authorship_tag": "ABX9TyOS/iUmMd7/iDBYFX+MktcH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i4J3mTgsyNJC"
+      },
+      "source": [
+        "There're not much to modify since this code is written using the high-level APIs(tf.keras)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -36,7 +45,7 @@
       "source": [
         "!git clone https://github.com/young-hwanlee/CNN_Keras_MNIST.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +73,7 @@
       "source": [
         "ls -ltr"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +118,7 @@
         "tf.compat.v1.set_random_seed(seed)\r\n",
         "np.random.seed(seed)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
