--- a/CNN_Keras_MNIST.ipynb
+++ b/CNN_Keras_MNIST.ipynb
@@ -30,7 +30,7 @@
         "id": "i4J3mTgsyNJC"
       },
       "source": [
-        "There're not much to modify since this code is written using the high-level APIs(tf.keras)."
+        "# ** There're not much to modify since this code is written using the high-level APIs(tf.keras).**"
       ]
     },
     {
