--- a/CNN_Keras_MNIST.ipynb
+++ b/CNN_Keras_MNIST.ipynb
@@ -151,7 +151,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "50N6LottWVbS"
+        "id": "50N6LottWVbS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "007d4355-406e-43fe-ffb3-6a11e496c0a2"
       },
       "source": [
         "## Load pre-shuffled MNIST data into train and test sets\n",
@@ -162,18 +166,27 @@
         "img_cols = 28\n",
         "input_shape = (img_rows, img_cols, 1)\n",
         "\n",
+        "print('Training data size before reshaping :', X_train.shape)\n",
+        "print('Test data size before reshaping :', X_test.shape)\n",
+        "\n",
         "X_train = X_train.reshape(X_train.shape[0], img_rows, img_cols, 1)\n",
         "X_test = X_test.reshape(X_test.shape[0], img_rows, img_cols, 1)\n",
-        "X_train = X_train.astype('float32')\n",
-        "X_test = X_test.astype('float32')\n",
-        "X_train /= 255\n",
-        "X_test /= 255\n",
+        "# X_train = X_train.astype('float32')\n",
+        "# X_test = X_test.astype('float32')\n",
+        "# X_train /= 255\n",
+        "# X_test /= 255\n",
+        "X_train = X_train.astype('float32') / 255\n",
+        "X_test = X_test.astype('float32') / 255\n",
         "\n",
         "## Reserve 10,000 samples for validation\n",
         "X_train = X_train[:-10000]\n",
         "y_train = y_train[:-10000]\n",
         "X_val = X_train[-10000:]\n",
         "y_val = y_train[-10000:]\n",
+        "\n",
+        "print('Training data size after reshaping :', X_train.shape)\n",
+        "print('Validation data size after reshaping :', X_val.shape)\n",
+        "print('Test data size after reshaping :', X_test.shape)\n",
         "\n",
         "## Preprocess class labels\n",
         "num_classes = 10\n",
@@ -188,8 +201,20 @@
         "Y_val = tf.keras.utils.to_categorical(y_val, num_classes)\n",
         "Y_test = tf.keras.utils.to_categorical(y_test, num_classes)"
       ],
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training data size before reshaping : (60000, 28, 28)\n",
+            "Test data size before reshaping : (10000, 28, 28)\n",
+            "Training data size after reshaping : (50000, 28, 28, 1)\n",
+            "Validation data size after reshaping : (10000, 28, 28, 1)\n",
+            "Test data size after reshaping : (10000, 28, 28, 1)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
