--- a/CNN_Keras_MNIST.ipynb
+++ b/CNN_Keras_MNIST.ipynb
@@ -171,6 +171,9 @@
         "\n",
         "X_train = X_train.reshape(X_train.shape[0], img_rows, img_cols, 1)\n",
         "X_test = X_test.reshape(X_test.shape[0], img_rows, img_cols, 1)\n",
+        "# 1 for black&white image, i.e. (img_rows, img_cols, 1)\n",
+        "# 3 for RGB image, i.e. (img_rows, img_cols, 3)\n",
+        "\n",
         "# X_train = X_train.astype('float32')\n",
         "# X_test = X_test.astype('float32')\n",
         "# X_train /= 255\n",
